hphp/hack/test/typecheck/references/refs_in_array/foreach3.php.exp
File "foreach3.php", line 13, characters 27-29:
Cannot take references to array elements. (Typing[4225])
